[workspace]
# Make sure this list matches the "Test Doc Build" section in .github/workflows/ci.yml
members = ["geozero", "geozero-cli", "geozero-bench"]
default-members = ["geozero", "geozero-cli"]
resolver = "3"

[workspace.package]
version = "0.14.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>", "Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
edition = "2024"
homepage = "https://github.com/georust/geozero"
repository = "https://github.com/georust/geozero"
readme = "README.md"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Used in geozero-cli and geozero-bench
# geozero version must be in sync with flatgeobuf version!
geozero = { version = "0.14.0", default-features = false }
flatgeobuf = "5.0.0"

async-trait = "0.1"
base64 = "0.22.1"
byteorder = { version = "1.4.3", default-features = false }
bytes = "1.4"
clap = { version = "4.3", features = ["derive"] }
criterion = "0.7.0"
csv = "1.2.2"
dbase = "0.6.0"
diesel = { version = "2.2.3", default-features = false, features = ["postgres"] }
dup-indexer = "0.4.0"
env_logger = "0.11.5"
futures-util = "0.3.28"
gdal = { version = "0.18.0", default-features = false }
gdal-sys = "0.11.0"
geo = "0.31.0"
geo-types = { version = "0.7.11", default-features = false }
geojson = { version = "0.24.1", default-features = false }
geos = "10.0"
gpx = { version = "0.10", default-features = false }
hex = "0.4"
kdbush = "0.2"
log = "0.4.19"
lyon = "1.0.1"
postgis = "0.9.0"
postgres = "0.19"
postgres-types = "0.2"
prost = "0.14.1"
# NOTICE: When updating prost-build, remove geozero/src/mvt/vector_tile.rs to force a rebuild
prost-build = "0.14.1"
scroll = "0.13.0"
seek_bufread = "1.2"
serde_json = "1.0.104"
sqlx = { version = "0.8", default-features = false }
thiserror = "2.0.7"
tokio = { version = "1.30.0", default-features = false }
wkt = "0.14.0"

[patch.crates-io]
geozero = { path = "./geozero" }
