[package]
name = "geozero-bench"
version = "0.2.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2021"
description = "GeoZero benchmark."
homepage = "https://github.com/georust/geozero"
repository = "https://github.com/georust/geozero"
license = "MIT/Apache-2.0"

[dependencies]
criterion = "0.5.1"
flatgeobuf = "3.25.0"
futures-util = "0.3.5"
gdal = { version = "0.14", default-features = false }
gdal-sys = { version = "0.8" }
geo = "0.24.1" # { version = "0.17", features = ["postgis-integration"] }
geo-types = { version = "0.7", default-features = false }
geojson = "0.24.0"
geozero = { path = "../geozero", features = ["with-geo", "with-geojson", "with-geos", "with-gpkg", "with-mvt", "with-postgis-postgres", "with-postgis-sqlx"] }
postgis = "0.9.0"
postgres = "0.19"
seek_bufread = "1.2"
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "sqlite"] }
tokio = { version = "1.27.0", default-features = false, features = ["rt-multi-thread"] }

[[bench]]
name = "geobench"
harness = false

[[bench]]
name = "mvtbench"
harness = false
