[package]
name = "geozero-cli"
description = "Command line interface for GeoZero"
readme = "README.md"
default-run = "geozero"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "geozero"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
clap.workspace = true
env_logger.workspace = true
flatgeobuf.workspace = true
geozero = { workspace = true, default-features = true, features = ["with-csv"] }
tokio = { workspace = true, default-features = true, features = ["full"] }
