[package]
name = "geozero-core"
version = "0.3.1"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"
description = "Zero-Copy reading and writing of geospatial data."
homepage = "https://github.com/pka/geozero"
repository = "https://github.com/pka/geozero"
readme = "../README.md"
license = "MIT/Apache-2.0"
keywords = ["geo", "spatial", "geojson", "svg", "wkt"]

[features]
default = []
# others: ["geos"]

[dependencies]
geozero = { version =  "0.3.1", path = "../geozero" }
geojson = { version =  "0.18" }
geo-types = { version =  "0.5", default-features = false }
geos = { version =  "5.0", optional = true }

[dev-dependencies]
geo = { version =  "0.13" }
kdbush = "0.2"
polylabel = "2.2"
flatgeobuf = { git = "https://github.com/pka/flatgeobuf/", branch="geozero" }
