[package]
name = "geozero-core"
version = "0.4.3"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"
description = "Zero-Copy reading and writing of geospatial data."
homepage = "https://github.com/pka/geozero"
repository = "https://github.com/pka/geozero"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["geo", "geojson", "gdal", "geos", "postgis"]

[features]
default = []
gdal-lib = ["gdal", "gdal-sys"]
geos-lib = ["geos"]
gpkg = ["sqlx"]
postgis-sqlx = ["sqlx"]
postgis-postgres = ["postgres-types"]

[package.metadata.docs.rs]
features = ["gpkg", "postgis-sqlx", "postgis-postgres"]

[dependencies]
geozero = { version = "0.5", path = "../geozero" }
geojson = { version = "0.18" }
geo-types = { version = "0.6", default-features = false }
geos = { version = "5.0", optional = true }
gdal = { version = "0.6", default-features = false, optional = true }
gdal-sys = { version = "0.2", optional = true }
scroll = "0.10"
sqlx = { version = "0.4.0-pre", git = "https://github.com/launchbadge/sqlx", default-features = false, features = [ "runtime-tokio", "postgres", "sqlite" ], optional = true }
postgres-types = { version = "0.1", optional = true }

[dev-dependencies]
hex = "0.4"
geo = "0.14"
kdbush = "0.2"
polylabel = "2.2"
flatgeobuf = { git = "https://github.com/pka/flatgeobuf/", branch="geozero" }
postgres = "0.17"
tokio = { version = "0.2", default-features = false, features = ["rt-threaded"] }
