[package]
name = "geozero-core"
version = "0.5.1"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"
description = "Zero-Copy reading and writing of geospatial data."
homepage = "https://github.com/georust/geozero"
repository = "https://github.com/georust/geozero"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["geo", "geojson", "gdal", "geos", "postgis"]

[features]
default = []
gdal-lib = ["gdal", "gdal-sys"]
geos-lib = ["geos"]
gpkg = ["sqlx"]
postgis-sqlx = ["sqlx"]
postgis-postgres = ["postgres-types"]
tessellator = ["lyon"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
geozero = { version = "0.5", path = "../geozero" }
geojson = { version = "0.21" }
geo-types = { version = "0.6", default-features = false }
geos = { version = "7.0", optional = true }
gdal = { version = "0.7", default-features = false, optional = true }
gdal-sys = { version = "0.3", optional = true }
lyon = { version = "0.16", optional = true }
scroll = "0.10"
sqlx = { version = "0.4.0", default-features = false, features = [ "runtime-tokio-native-tls", "postgres", "sqlite" ], optional = true }
postgres-types = { version = "0.1", optional = true }
bytes = "0.5"

[dev-dependencies]
hex = "0.4"
geo = "0.14"
kdbush = "0.2"
polylabel = "2.2"
flatgeobuf = "0.3.4"
postgres = "0.17"
tokio = { version = "0.2", default-features = false, features = ["rt-threaded"] }
