[package]
name = "geozero-shp"
version = "0.3.1"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"
description = "Shapefile reader with GeoZero API."
homepage = "https://github.com/georust/geozero"
repository = "https://github.com/georust/geozero"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["geo", "shapefile"]

[dependencies]
thiserror = "1.0"
geozero = { version = "0.8", default-features = false }
byteorder = "1.4.3"
dbase = "0.2.3"

[dev-dependencies]
geozero = { version = "0.8", default-features = true }
