[package]
name = "geozero-shp"
version = "0.4.0"
description = "Shapefile reader with GeoZero API."
readme = "README.md"
keywords = ["geo", "shapefile"]
categories = ["science::geo"]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
byteorder.workspace = true
dbase.workspace = true
geozero.workspace = true
thiserror.workspace = true

[dev-dependencies]
geo-types.workspace = true
geozero = { workspace = true, default-features = true }
