[package]
name = "geozero-shp"
version = "0.6.0"
description = "WARNING: The shp driver is now included in geozero."
readme = "README.md"
keywords = ["geo", "shapefile"]
categories = ["science::geo"]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
byteorder.workspace = true
dbase.workspace = true
geozero.workspace = true
thiserror.workspace = true

[dev-dependencies]
geo-types.workspace = true
geozero = { workspace = true, default-features = true }
